finished html page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-<p>KATY</p>
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <title> &hearts; Frenchie &hearts; </title>
+    </head>
+    <body>
+        <header>
+            <h1>&#10048; Frenchie &#10048;</h1>
+            <img src="images/IMG_0565.jpeg" alt="frenchiepic1" height="250" width="250">
+        </header>
+        <main>
+        <article id="Stats">
+            <h2>Stats</h2>
+            <ul>
+                <li>Breed: Deer-Head Chihuahua</li>
+                <li>Weight: 7 lbs</li>
+                <li>Age: 8</li>
+                <li>Gender: Female</li>
+            </ul>
+        </article>
+
+        <article id="Early-Years">
+            <h3>Early Years</h3>
+            <p>As an orphaned puppy destined for euthanization, </br>
+            the little angel otherwise known as Frenchie was adopted </br>
+            in Columbia, Missouri on September 11th 2011. </br>
+            As a puppy, Frenchie loved to bother the older dogs she lived with, eat her mom's socks, </br>
+            and climb to the top of staircases only to whine until mom came to rescue her because she couldn't quite</br>
+            figure out how to get back down. </br>
+            </p>
+         </article>
+         <img src="images/IMG_1557.jpeg" alt = "frenchiepic3" height = "250" width = "250">
+         <article id="Breed">
+             <h3>Breed</h3>
+            <p>
+            Although Frenchie's exact breed is unknown because her owner is too cheap to get a DNA test, </br>
+            it is agreed upon by at least two vets that she's probably just a deer-head Chihuahua.</br>
+            </p>
+         </article>
+         <img src="images/IMG_1463.jpeg" alt = "frenchiepic4" height = "250" width = "250">
+         <article id="Living-History">
+            <h3>Living History</h3>
+            <p>
+            Frenchie was born in Jefferson City, MO, grew up in Columbia, MO, and lived in Boston, MA for two years.</br>
+            Currently, French resides in Saint Louis, MO. </br>
+            </p>
+        </article>
+        <img src="images/IMG_1464.jpeg" alt = "frenchiepic5" height = "250" width = "250">
+        <article id="Hobbies">
+            <h3>Hobbies & Passions</h3>
+            <ul>
+                <li>naps</li>
+                <li>belly rubs</li>
+                <li>throwing up on mom</li>
+                <li>begging for mom's leftovers</li>
+            </ul>
+        </article>
+        <img src="images/IMG_1418.jpeg" alt = "frenchiepic6" height = "250" width = "250">
+        <article id="Flaws">
+            <h3>Flaws</h3>
+            <ul>
+                <li>sheds more than any 7lb creature should</li>
+                <li>extreme laziness</li>
+                <li>excessively mean to puppys and any dog that wants mom's attention</li>
+            </ul>
+        </article>
+        <img src="images/IMG_0963.jpeg" alt="frenchiepic7" height="250" width="250">
+            </main>
+            <footer>
+                Author: Frenchie's Mom</br>
+                Contact info: <a href="mailto:katylahv@gmail.com">katylahv@gmail.com</a>.
+            </footer>
+    </body>
+</html>
