changes to work with css

--- a/index.html
+++ b/index.html
@@ -3,50 +3,76 @@
 <html>
     <head>
         <title> &hearts; Frenchie &hearts; </title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
+    <div class = "french-intro">
         <header>
             <h1>&#10048; Frenchie &#10048;</h1>
             <img src="images/IMG_0565.jpeg" alt="frenchiepic1" height="250" width="250">
         </header>
-        <main>
-        <article id="Stats">
-            <h2>Stats</h2>
-            <ul>
-                <li>Breed: Deer-Head Chihuahua</li>
-                <li>Weight: 7 lbs</li>
-                <li>Age: 8</li>
-                <li>Gender: Female</li>
-            </ul>
-        </article>
+    </div>
+        
+    
+    <main>
+        <div class= "container">
+        <div class="frenchrow1">
 
+       <div>
+            <img src="images/IMG_1464.jpeg" alt = "frenchiepic5" height = "250" width = "250">
+            <article id="Living-History">
+               <h3>Living History</h3>
+               <p>
+               Frenchie was born in Jefferson City, MO, grew up 
+               in Columbia, MO, and lived in Boston, MA for two years.
+               Currently, French resides in Saint Louis, MO. 
+               </p>
+           </article>
+           </div>
+
+       <div>
+        <img src="images/IMG_1557.jpeg" alt = "frenchiepic3" height = "250" width = "250">
         <article id="Early-Years">
             <h3>Early Years</h3>
-            <p>As an orphaned puppy destined for euthanization, </br>
-            the little angel otherwise known as Frenchie was adopted </br>
-            in Columbia, Missouri on September 11th 2011. </br>
-            As a puppy, Frenchie loved to bother the older dogs she lived with, eat her mom's socks, </br>
-            and climb to the top of staircases only to whine until mom came to rescue her because she couldn't quite</br>
-            figure out how to get back down. </br>
+            <p>As an orphaned puppy destined for euthanization,
+            the little angel otherwise known as Frenchie was adopted 
+            in Columbia, Missouri on September 11th 2011. 
+            As a puppy, Frenchie loved to bother the older dogs she lived with, eat her mom's socks, 
+            and climb to the top of staircases only to whine until mom came to rescue her because she couldn't quite
+            figure out how to get back down. 
             </p>
          </article>
-         <img src="images/IMG_1557.jpeg" alt = "frenchiepic3" height = "250" width = "250">
+         </div>
+
+         <div>
+         <img src="images/IMG_1463.jpeg" alt = "frenchiepic4" height = "250" width = "250">
          <article id="Breed">
              <h3>Breed</h3>
             <p>
-            Although Frenchie's exact breed is unknown because her owner is too cheap to get a DNA test, </br>
-            it is agreed upon by at least two vets that she's probably just a deer-head Chihuahua.</br>
+            Although Frenchie's exact breed is unknown<
+            because her owner is too cheap to get a DNA test, 
+            it is agreed upon by at least two vets that 
+            she's probably just a deer-head Chihuahua.
             </p>
          </article>
-         <img src="images/IMG_1463.jpeg" alt = "frenchiepic4" height = "250" width = "250">
-         <article id="Living-History">
-            <h3>Living History</h3>
-            <p>
-            Frenchie was born in Jefferson City, MO, grew up in Columbia, MO, and lived in Boston, MA for two years.</br>
-            Currently, French resides in Saint Louis, MO. </br>
-            </p>
-        </article>
-        <img src="images/IMG_1464.jpeg" alt = "frenchiepic5" height = "250" width = "250">
+        </div>
+    </div>
+    <div class ="frenchrow2">
+            <div>
+                <img src="images/wongfrench.JPG" alt = frenchiepic5 height = "250" width = "250">
+                    <article id="Stats">
+                        <h3>Stats</h3>
+                        <ul>
+                            <li>Breed: Deer-Head Chihuahua</li>
+                            <li>Weight: 7 lbs</li>
+                            <li>Age: 8</li>
+                            <li>Gender: Female</li>
+                        </ul>
+                    </article>
+                   </div>
+
+        <div>
+        <img src="images/IMG_1418.jpeg" alt = "frenchiepic6" height = "250" width = "250">
         <article id="Hobbies">
             <h3>Hobbies & Passions</h3>
             <ul>
@@ -56,7 +82,10 @@
                 <li>begging for mom's leftovers</li>
             </ul>
         </article>
-        <img src="images/IMG_1418.jpeg" alt = "frenchiepic6" height = "250" width = "250">
+        </div>
+
+        <div>
+        <img src="images/IMG_0963.jpeg" alt="frenchiepic7" height="250" width="250">
         <article id="Flaws">
             <h3>Flaws</h3>
             <ul>
@@ -65,8 +94,13 @@
                 <li>excessively mean to puppys and any dog that wants mom's attention</li>
             </ul>
         </article>
-        <img src="images/IMG_0963.jpeg" alt="frenchiepic7" height="250" width="250">
+        </div>
+        </div>
+        </div>
             </main>
+
+
+
             <footer>
                 Author: Frenchie's Mom</br>
                 Contact info: <a href="mailto:katylahv@gmail.com">katylahv@gmail.com</a>.
